tests/ui/proc-macro/ice-wrong-span-114865.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/ice-wrong-span-114865.rs:16:10
   |
LL |     foo!("Õ¡ù");
   |          ^^^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/ice-wrong-span-114865.rs:17:10
   |
LL |     foo!("rÕ¡ùÕ¡ù");
   |          ^^^^^^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/ice-wrong-span-114865.rs:19:11
   |
LL |     foo2!("Õ¡ù");
   |           ^^^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/ice-wrong-span-114865.rs:20:11
   |
LL |     foo2!("rÕ¡ùÕ¡ù");
   |           ^^^^^^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/ice-wrong-span-114865.rs:22:11
   |
LL |     foo3!(r"abc" Õ¡ù);
   |           ^^^^^^^^^

error: 1 positional argument in format string, but no arguments were given
  --> $DIR/ice-wrong-span-114865.rs:24:11
   |
LL |     foo4!(r##"abcd"## Õ¡ù);
   |           ^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

